Apply container and fix alignments of footer

--- a/style.css
+++ b/style.css
@@ -557,7 +557,7 @@ footer{
 	font-style: normal;
 	width: 100%;
 	flex-direction: column;
-		padding-left:  134px;
+		/* padding-left:  134px; */
 		line-height: 29px;
 	
 
